tests/rosetta/out/Rust/circular-primes.error
rustc: exit status 1
warning: denote infinite loops with `loop { ... }`
  --> /tmp/circular-primes.rs:35:9
   |
35 |         while true {
   |         ^^^^^^^^^^ help: use `loop`
   |
   = note: `#[warn(while_true)]` on by default

warning: denote infinite loops with `loop { ... }`
  --> /tmp/circular-primes.rs:53:5
   |
53 |     while true {
   |     ^^^^^^^^^^ help: use `loop`

error[E0308]: mismatched types
  --> /tmp/circular-primes.rs:38:18
   |
28 |         let mut nn = n;
   |                      - expected due to this value
...
38 |             nn = ((nn as f64) as f64) + f * (1 - pow) as f64;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `f64`

error[E0308]: mismatched types
  --> /tmp/circular-primes.rs:76:20
   |
76 |             out += xs[i as usize].to_string();
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
76 |             out += &xs[i as usize].to_string();
   |                    +

error[E0308]: mismatched types
  --> /tmp/circular-primes.rs:82:16
   |
72 |     fn showList(xs: Vec<i32>) -> &'static str {
   |                                  ------------ expected `&str` because of return type
...
82 |         return format!("{}{}", out, "]");
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
   |
   = note: this error originates in the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: variable does not need to be mutable
  --> /tmp/circular-primes.rs:49:9
   |
49 |     let mut digits = vec![1, 3, 7, 9];
   |         ----^^^^^^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` on by default

error[E0382]: use of moved value: `digits`
  --> /tmp/circular-primes.rs:66:22
   |
49 |     let mut digits = vec![1, 3, 7, 9];
   |         ---------- move occurs because `digits` has type `Vec<i32>`, which does not implement the `Copy` trait
...
53 |     while true {
   |     ---------- inside of this loop
...
66 |             for d in digits {
   |                      ^^^^^^ `digits` moved due to this implicit call to `.into_iter()`, in previous iteration of loop
   |
note: `into_iter` takes ownership of the receiver `self`, which moves `digits`
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/core/src/iter/traits/collect.rs:313:18
help: consider iterating over a slice of the `Vec<i32>`'s content to avoid moving into the `for` loop
   |
66 |             for d in &digits {
   |                      +

error: aborting due to 4 previous errors; 3 warnings emitted

Some errors have detailed explanations: E0308, E0382.
For more information about an error, try `rustc --explain E0308`.
